# java-cpp-example

./: CMakeLists.txt  LICENSE.txt  README.md
cpplib/: CMakeLists.txt
cpplib/src/: MyClass.cpp
java-jna/: CMakeLists.txt
java-jna/c/: c_wrapper.cpp
java-jna/java/: .project
java-jna/java/src/edu/nyu/cpptest/cpplib/: MyClass.java
java-jni/: CMakeLists.txt
java-jni/c/: jni_wrapper.cpp
java-jni/java/: .project
java-jni/java/src/edu/nyu/cpptest/app/: Main.java
java-jni/java/src/edu/nyu/cpptest/cpplib/: MyClass.java
java-swig/: CMakeLists.txt
java-swig/java/: .project
java-swig/swig/: cpplib.i
swig/: Makefile
swig/cpp/mylib/: MyClass.cpp  MyClass.h
swig/java/src/edu/nyu/cpptest/app/: Main.java
swig/swig/: mylib.i
